Variable keyword in sites' footer

--- a/app/views/layouts/sites.haml
+++ b/app/views/layouts/sites.haml
@@ -18,6 +18,6 @@
             = yield :column
       .footer
         %p.copyright
-          Powered by
-          = link_to "Teambox Project Collaboration", "http://www.teambox.com"
+          Teambox 
+          = link_to random_keyword, "http://teambox.com"
 
