--- a/app/views/sites/show.haml
+++ b/app/views/sites/show.haml
@@ -1,7 +1,7 @@
-%h1= image_tag @organization.logo.url(:top), :alt => h(@organization.name)
+%h1= image_tag @organization.logo.url(:top), :alt => @organization.name
 
 .custom_html
-  = @organization.description.try(:html_safe)
+  = @organization.description.try(:html_safe) || "Configure this text by going editing your organization's preferences."
 
 - content_for :column do
   = form_tag sites_path, :class => 'new_session', :id => 'new_session' do
