--- a/app/styles/_users.sass
+++ b/app/styles/_users.sass
@@ -368,7 +368,7 @@ a.micro_avatar
     padding: 2px
     border: 1px solid #999
 
-.betatester
+.betatester,.keyboard_shortcuts
   display: block
   margin: 10px 0
   padding-left: 120px
