--- a/app/views/users/form/_settings.haml
+++ b/app/views/users/form/_settings.haml
@@ -42,3 +42,7 @@
 .betatester.check_box
   = f.check_box :betatester
   = f.label :betatester, t('users.form.betatester'), :style => 'float: none'
+
+.keyboard_shortcuts.check_box
+  = f.check_box :keyboard_shortcuts
+  = f.label :keyboard_shortcuts, t('users.form.keyboard_shortcuts'), :style => 'float: none'
