--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -21,6 +21,7 @@
     = load_my_avatar_for_new_comments
     = load_javascript_user_data
     = archived_project_strip(@current_project)
+    = render 'shared/keyboard'
     #header_wrap
       = header
     = configure_this_organization
