fix feature for convert to task
Now it can be run in the background, because we always show the extra
buttons that before were only shown after focusing on the textarea,
which didn't work if the browser was not on the foreground.

--- a/app/styles/cucumber.sass
+++ b/app/styles/cucumber.sass
@@ -8,3 +8,10 @@
         display: inline-block
         &hover
           display: inline-block
+
+#activities
+  .thread
+    form.new_comment
+      .extra
+        display: block !important
+
