fix dep. warn in the view

--- a/app/views/emailer/daily_task_reminder.html.haml
+++ b/app/views/emailer/daily_task_reminder.html.haml
@@ -1,4 +1,4 @@
-- self.with_options(:scope => "users.daily_task_reminder_email") do |i18n|
+= self.with_options(:scope => "users.daily_task_reminder_email") do |i18n|
   .email{ :style => email_global }
     %p= i18n.t(:daily_task_reminder_from_teambox)
 
