Fix many issue where response sent over iframe are escaped

--- a/app/views/shared/iframe_error.html.erb
+++ b/app/views/shared/iframe_error.html.erb
@@ -3,5 +3,5 @@
   <head>
     <meta content='text/html;charset=utf-8' http-equiv='content-type'>
   </head>
-  <body class="error"><script type="application/x-json"><%= data.to_json %></script></body>
+  <body class="error"><script type="application/x-json"><%= data.to_json.html_safe %></script></body>
 </html>
