Use equivalent syntax that is more amenable to rendering partials outside controllers

--- a/app/views/activities/_thread_comments.haml
+++ b/app/views/activities/_thread_comments.haml
@@ -1,6 +1,6 @@
 - thread_id = "#{thread.class.to_s}_#{thread.id}"
 
-- case controller.controller_name
+- case controller_name
 - when "projects", "activities"
   - show_comments = 3
   - if comments.size > show_comments
@@ -8,6 +8,6 @@
       = link_to t('activities.thread.more_comments', :count => comments.size - show_comments),
         show_thread_path(thread, :thread_type => thread.class.to_s),
         :'data-remote' => true
-  = render comments[0..(show_comments-1)].reverse
+  = render :partial => "comments/comment", :collection => comments[0..(show_comments-1)].reverse
 - else
-  = render comments.reverse
+  = render :partial => "comments/comment", :collection => comments.reverse
