--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -19,7 +19,7 @@
     = yield :js_includes
     = javascript_tag do
       = yield :js_templates
-  %body{ :class => "#{location_name} #{I18n.locale} #{Rails.env} controller_#{controller.controller_name}", :reload_url => reload_url}
+  %body{ :class => "#{location_name} #{I18n.locale} #{Rails.env} controller_#{controller_name}", :reload_url => reload_url}
     = load_my_avatar_for_new_comments
     = load_javascript_user_data
     = archived_project_strip(@current_project)
