--- a/app/views/layouts/parts.haml
+++ b/app/views/layouts/parts.haml
@@ -1,3 +1,3 @@
-.body_classes== #{location_name} #{I18n.locale} #{Rails.env} controller_#{controller.controller_name}
+.body_classes== #{location_name} #{I18n.locale} #{Rails.env} controller_#{controller_name}
 .content_part= yield
 .column_part= yield :column
