--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -23,6 +23,7 @@
     = render 'shared/loading'
     = load_my_avatar_for_new_comments
     = load_javascript_user_data
+    = include_juggernaught
     = archived_project_strip(@current_project)
     = render 'shared/keyboard'
     - if Rails.env.production?
