--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -40,4 +40,8 @@
       = footer
     = autocomplete_projects_people_data
     = projects_people_data
+    #show_new_content{:style => 'display:none'}
+      .actions
+        %a{:href=>'#'} Show
+      %ul.notifications
 
