Specify text field width for signup form. Fix layout issue for Firefox

--- a/app/styles/_signup.sass
+++ b/app/styles/_signup.sass
@@ -14,6 +14,7 @@ $label_indent: 150px
 
     .text_field
       input
+        width: 236px
         font-size: 16px
         padding: 5px
         border:
