--- a/app/styles/_push.sass
+++ b/app/styles/_push.sass
@@ -15,7 +15,11 @@
   .actions
     position: relative
     float: left
-    margin-top: 10px
+    margin-top: 2px
+
+    a
+      font-size: 12px
+      color: black
 
   ul
     list-style: none
