--- a/app/styles/_users.sass
+++ b/app/styles/_users.sass
@@ -358,7 +358,7 @@ a.micro_avatar
     padding: 2px
     border: 1px solid #999
 
-.betatester,.keyboard_shortcuts
+.betatester, .keyboard_shortcuts, .show_badges
   display: block
   margin: 10px 0
   padding-left: 120px
