Remove 'threaded' distinction in comments
Before, a threaded comment would show a micro avatar
and others would use the thumb avatar

--- a/app/views/activities/_thread_comments.haml
+++ b/app/views/activities/_thread_comments.haml
@@ -8,6 +8,6 @@
       = link_to t('activities.thread.more_comments', :count => comments.size - show_comments),
         show_thread_path(thread, :thread_type => thread.class.to_s),
         :'data-remote' => true
-  = render comments[0..(show_comments-1)].reverse, :threaded => true
+  = render comments[0..(show_comments-1)].reverse
 - else
-  = render comments.reverse, :threaded => true
+  = render comments.reverse
