--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -1,6 +1,4 @@
-- simpleconv = false unless local_assigns[:simpleconv]
-
-- cache_comment(comment, simpleconv) do
+- cache_comment(comment) do
   %div[comment]{ comment_data(comment) }
     .info
       = micro_avatar(comment.user)
@@ -21,16 +19,12 @@
                   :'data-confirm' => t('.confirm_delete'), :'data-remote' => true, :class => :delete
       .body.textilized
         .before
-          = link_to(h(comment.user.name), comment.user, :class => :user) + " "
+          = link_to(comment.user.name, comment.user, :class => :user) + " "
           - if comment.task_comment?
             = comment_task_status(comment)
             = comment_task_due_on(comment)
           - if comment.hours?
             = content_tag(:span, human_hours(comment.hours), :class => :hours)
-          - if simpleconv
-            %span.in_project
-              = t('.commented_in_project', :user => '', :project => '')
-              = link_to(comment.project, comment.project, :class => :project) + ": "
 
         - if comment.task_comment? and comment.assigned_transition?
           %p.assigned_transition
