--- a/app/views/emailer/daily_task_reminder.text.plain.erb
+++ b/app/views/emailer/daily_task_reminder.text.plain.erb
@@ -1,12 +1,11 @@
-<% self.with_options(:scope => "users.daily_task_reminder_email") do |i18n| %>
-<%= i18n.t(:daily_task_reminder_from_teambox) %>
+<%= t('users.daily_task_reminder_email.daily_task_reminder_from_teambox') %>
 
-<%= tasks_for_daily_reminder(@tasks[:late], @user, i18n.t(:late_tasks)) %>
-<%= tasks_for_daily_reminder(@tasks[:today], @user, i18n.t(:tasks_for_today)) %>
-<%= tasks_for_daily_reminder(@tasks[:tomorrow], @user, i18n.t(:tasks_for_tomorrow)) %>
-<%= tasks_for_daily_reminder(@tasks[:for_next_two_weeks], @user, i18n.t(:tasks_for_next_two_weeks)) %>
-<%= tasks_for_daily_reminder(@tasks[:no_due_date], @user, i18n.t(:tasks_without_a_due_date)) %>
+<%= tasks_for_daily_reminder(@tasks[:late], @user, t('users.daily_task_reminder_email.late_tasks')) %>
+<%= tasks_for_daily_reminder(@tasks[:today], @user, t('users.daily_task_reminder_email.tasks_for_today')) %>
+<%= tasks_for_daily_reminder(@tasks[:tomorrow], @user, t('users.daily_task_reminder_email.tasks_for_tomorrow')) %>
+<%= tasks_for_daily_reminder(@tasks[:for_next_two_weeks], @user, t('users.daily_task_reminder_email.tasks_for_next_two_weeks')) %>
+<%= tasks_for_daily_reminder(@tasks[:no_due_date], @user, t('users.daily_task_reminder_email.tasks_without_a_due_date')) %>
 
-<%= i18n.t(:you_receive_this_message_html, :link => i18n.t(:settings_page)) %>
+<%= t('users.daily_task_reminder_email.you_receive_this_message_html', :link => t('users.daily_task_reminder_email.settings_page')) %>
 <%= account_notifications_url %>
 <% end %>
