Corrections for badges wording

--- a/app/templates/badges/first_project.haml
+++ b/app/templates/badges/first_project.haml
@@ -3,8 +3,7 @@
   .text
     %h2 Let's get started!
     %p
-      Your first project is ready. You can now invite your colleagues
-      and start adding content to it.
+      Your first project is ready. Projects are a shared space for discussions, tasks and files.
     %p
-      Projects are a shared space for discussions, tasks and files.
+      Next, invite users and start collaborating.
   .clear
