--- a/app/templates/badges/first_task.haml
+++ b/app/templates/badges/first_task.haml
@@ -3,7 +3,7 @@
   .text
     %h2 Your first Task!
     %p
-      Now you can <strong>keep track</strong> of what needs to be done and delegate tasks to your team.
+      <strong>Keep track</strong> of what needs to be done and delegate tasks to your team.
     %p
       Stay on top of your tasks inside each Project. You'll never miss a deadline!
   .clear
