--- a/app/templates/badges/first_invite.haml
+++ b/app/templates/badges/first_invite.haml
@@ -3,9 +3,9 @@
   .text
     %h2 Invitations sent!
     %p
-      We just sent your contacts an email to join your project.
-      Everything inside Teambox is private and secure.
+      You just sent your contacts an email to join your project.
+      Teambox is private and secure and only project members can see your content.
     %p
-      Create a project for each workgroup you're involved with,
-      and send invites to everybody related to it.
+      Tip: Create a project for each workgroup you're involved with,
+      and send each member an invitation.
   .clear
