--- a/app/templates/badges/first_page.haml
+++ b/app/templates/badges/first_page.haml
@@ -3,8 +3,7 @@
   .text
     %h2 Your first Page!
     %p
-      You now have a <strong>shared place</strong> to post important notes for your team.
+      A <strong>shared place</strong> to post important notes for your team.
     %p
-      Use pages to keep your information in one place:
-      Documents, reference, etc.
+      Use pages to keep your information in one place: documents, reference, etc.
   .clear
