--- a/app/views/projects/index.haml
+++ b/app/views/projects/index.haml
@@ -23,7 +23,6 @@
 
 - content_for :column do
   .more_links
+    = render "shared/collapse"
     .el= link_to t('shared.instructions.subscribe_to_feeds'), feeds_path, :class => 'feeds'
     .el= link_to t('shared.instructions.subscribe_to_calendars'), calendars_path, :class => 'calendar'
-    .el= link_to t('shared.collapsed_mode'), "#", :class => 'collapsed_mode'
-    .el{ :style => 'display: none' }= link_to t('shared.expanded_mode'), "#", :class => 'expanded_mode'
