--- a/app/styles/_icons.sass
+++ b/app/styles/_icons.sass
@@ -51,3 +51,5 @@
   +sprite("/images/loading.gif", 0, 0, 16px, 16px)
 .add_watchers
   +sprite("/famfamfam/user_go.png", 0, 0, 16px, 16px)
+.google_docs_icon
+  +sprite("/images/google_docs/icon_6_document.gif", 0, 0, 16px, 16px)
