--- a/app/views/comments/_fields.haml
+++ b/app/views/comments/_fields.haml
@@ -26,6 +26,7 @@
     .attach
       %span= t('.attach') + ": "
       = link_to t('uploads.comment_upload_link'), '#uploads', :class => 'attach_icon hoverable', :title => "Attach a file"
+      - #Teambox.config.providers.detect { |p| p.provider == 'google' }
       = render 'google_docs/form', :f => f
       - if task_form
         = link_to t('comments.hours.tooltip'), '#hours', :class => 'add_hours_icon hoverable', :title => "Log hours"
