--- a/app/styles/_tasks.sass
+++ b/app/styles/_tasks.sass
@@ -174,6 +174,7 @@ form.new_task, form.edit_task, .task_list_form
       font-size: 12px
       padding-left: 4px
       span.assigned_date, span.assigned_user
+        display: none
         color: rgb(100,100,100)
         padding: 1px 5px
         margin-right: 5px
@@ -183,7 +184,6 @@ form.new_task, form.edit_task, .task_list_form
         background: rgb(245,245,245)
         border: solid 1px rgb(225,225,225)
         text-transform: uppercase
-        display: inline-block
         a
           color: rgb(100,100,100)
         a:hover
@@ -191,6 +191,14 @@ form.new_task, form.edit_task, .task_list_form
           color: rgb(0,0,0)
       .extended, span.status, span.project, span.task_list
         display: none
+  .task.due_on
+    .taskName
+      span.assigned_date
+        display: inline-block
+  .task.assigned
+    .taskName
+      span.assigned_user
+        display: inline-block
   .task.overdue
     .taskName
       a.name
