--- a/app/templates/projects/overlay.haml
+++ b/app/templates/projects/overlay.haml
@@ -11,7 +11,7 @@
       %a.conversations{ :href => "/projects/{{permalink}}/conversations" }
         = t('shared.navigation.conversations')
     %p
-      %a.tasks{ :href => "/projects/{{permalink}}/tasks" }
+      %a.tasks{ :href => "/projects/{{permalink}}/tasks_lists" }
         = t('shared.navigation.tasks')
     %p
       %a.pages{ :href => "/projects/{{permalink}}/pages" }
