--- a/app/templates/notifications/entry.haml
+++ b/app/templates/notifications/entry.haml
@@ -2,6 +2,23 @@
   {{#generic_case}}
   = t("notifications.entry.new_thread_html", :thread_url => link_to("{{activity/target_type}}", "{{activity/path}}", :"data-activity-id" => "{{activity/activity_id}}"), :user_url => link_to("@{{activity/user/username}}", "/users/{{activity/user/username}}", :"data-activity-id" => "{{activity/activity_id}}"))
   {{/generic_case}}
+  {{#joined_project}}
+  = t("notifications.entry.joined_project_html", :thread_url => link_to("{{activity/project/name}}", "/projects/{{activity/project/permalink}}", :"data-activity-id" => "{{activity/activity_id}}"), :user_url => link_to("@{{activity/user/username}}", "/users/{{activity/user/username}}", :"data-activity-id" => "{{activity/activity_id}}"))
+  {{/joined_project}}
+  {{#left_project}}
+  = t("notifications.entry.left_project_html", :thread_url => link_to("{{activity/project/name}}", "/projects/{{activity/project/permalink}}", :"data-activity-id" => "{{activity/activity_id}}"), :user_url => link_to("@{{activity/user/username}}", "/users/{{activity/user/username}}", :"data-activity-id" => "{{activity/activity_id}}"))
+  {{/left_project}}
+  {{#i_joined_project}}
+  = t("notifications.entry.i_joined_project_html", :thread_url => link_to("{{activity/project/name}}", "/projects/{{activity/project/permalink}}", :"data-activity-id" => "{{activity/activity_id}}"), :user_url => link_to("@{{activity/user/username}}", "/users/{{activity/user/username}}", :"data-activity-id" => "{{activity/activity_id}}"))
+  {{/i_joined_project}}
+  {{#i_left_project}}
+  = t("notifications.entry.i_left_project_html", :thread_url => link_to("{{activity/project/name}}", "/projects/{{activity/project/permalink}}", :"data-activity-id" => "{{activity/activity_id}}"), :user_url => link_to("@{{activity/user/username}}", "/users/{{activity/user/username}}", :"data-activity-id" => "{{activity/activity_id}}"))
+  {{/i_left_project}}
+
+  {{#import}}
+  = t("notifications.entry.import_html", :thread_url => link_to("{{activity/target_type}}", "/projects", :"data-activity-id" => "{{activity/activity_id}}"), :user_url => link_to("@{{activity/user/username}}", "/users/{{activity/user/username}}", :"data-activity-id" => "{{activity/activity_id}}"))
+  {{/import}}
+
   {{#assigned_to_you}}
   = t("notifications.entry.assigned_to_you_html", :thread_url => link_to("{{activity/target_type}}", "{{activity/path}}", :"data-activity-id" => "{{activity/activity_id}}"), :user_url => link_to("@{{activity/user/username}}", "/users/{{activity/user/username}}", :"data-activity-id" => "{{activity/activity_id}}"))
   {{/assigned_to_you}}
