--- a/app/views/activities/_thread.haml
+++ b/app/views/activities/_thread.haml
@@ -30,12 +30,10 @@
             :task => link_to(thread, [thread.project, thread]),
             :task_list => link_to(thread.task_list, [thread.task_list.project, thread.task_list]))
         = project_link_with_overlay thread.project
-        - if last_comment
-          .task_summary
-            = task_status_badge(thread.status_name)
-            = span_for_due_date(thread.due_on) if thread.due_on && thread.open?
-            - if thread.assigned_id? && thread.open?
-              = t('tasks.assigned.assigned_to', :user => thread.assigned.user.name)
+        .task_summary{:class => task_classes(thread)}
+          = task_status_badge(thread.status_name)
+          = span_for_thread_due_date(thread)
+          %span.assigned_to= (thread.assigned && thread.open?) ? t('tasks.assigned.assigned_to', :user => thread.assigned.user.name) : ''
       - if last_comment
         %p.excerpt
           %strong= last_comment.user.name
