--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -45,7 +45,7 @@
     %span.clickable= link_to pending_tasks.length, task_lists_path(:filter_assigned => 'mine'), :class => 'hoverable', :'data-hoverable-class' => 'left', :id => 'open_my_tasks', :title => t('.open_my_tasks')
   .contained
     - for task in pending_tasks
-      .el.task{ :id => "my_task_#{task.id}"}
+      .el.task{ :id => "my_task_#{task.id}", :class => task_classes(task) }
         = link_to task, [task.project, task], :class => ''
         = render_due_on(task,current_user)
     .el= link_to t('.show_all_tasks'), task_lists_path, :class => 'more'
