--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -20,7 +20,7 @@
   %body{ :class => "#{location_name} #{I18n.locale} #{Rails.env} controller_#{controller_name}", :reload_url => reload_url}
     = load_my_avatar_for_new_comments
     = load_javascript_user_data
-    = include_juggernaught
+    = include_push_server
     = archived_project_strip(@current_project)
     = render 'shared/keyboard'
     #header_wrap
