--- a/app/views/shared/_navigation.html.haml
+++ b/app/views/shared/_navigation.html.haml
@@ -39,7 +39,7 @@
       .el= link_to t('.new_project'), new_project_path, :class => 'more ajax'
 
   -# My Tasks
-  - pending_tasks = current_user.pending_tasks.reject { |t| t.due_on && t.due_on > 2.weeks.from_now }
+  - pending_tasks = current_user.nearest_pending_tasks
   .el#my_tasks
     = link_to t('.my_tasks'), task_lists_path, :class => 'tasks'
     %span.clickable= link_to pending_tasks.length, task_lists_path(:filter_assigned => 'mine'), :class => 'hoverable', :'data-hoverable-class' => 'left', :id => 'open_my_tasks', :title => t('.open_my_tasks')
