Digest delivery options account settings

--- a/app/styles/_users.sass
+++ b/app/styles/_users.sass
@@ -83,7 +83,9 @@ $micro_size: 24px
     label
       float: none
     .notify
-      padding-bottom: 7px
+      display: block
+    label.digest
+      text-align: left
   #change_password_link
     margin:
       top: 20px
