--- a/app/views/users/form/_notifications.haml
+++ b/app/views/users/form/_notifications.haml
@@ -6,6 +6,17 @@
   .check_box.notify
     = f.check_box :notify_tasks
     = f.label :notify_tasks, t('.notify_tasks')
+%br
+%h3= t('.email_delivery_options')
+.notifications.many_fields
+  .notify
+    = f.label :digest_delivery_hour, t('.digest_delivery_time')
+    = f.select :digest_delivery_hour, (0..24).collect {|i| [ l(Time.now.at_midnight + i.hours, :format => :short), i ] }
+
+  = f.fields_for :people do |person|
+    .notify
+      = person.label :digest, t('.digest', :project => person.object.project.name), :class => 'digest'
+      = person.select :digest, Person::DIGEST.collect {|option,index| [ t(".digest_option_#{option}"), index ] }
   .check_box.notify
     = f.check_box :wants_task_reminder
     = f.label :wants_task_reminder, t('.wants_task_reminder')
