--- a/app/views/emailer/project_digest.html.haml
+++ b/app/views/emailer/project_digest.html.haml
@@ -33,11 +33,12 @@
     = emailer_list_comments(target.comments, @comments)
     .actions{ :style => 'color: rgb(100,100,100)' }
       %p
+        - link = link_to t('emailer.notify.click_here'), [@project, target]
         - if target.class == Task
-          = t('emailer.notify.view_this_task_online_html', :link => link_to(t('emailer.notify.task_link'), project_task_url(@project, target)))
+          - email = link_to t('emailer.notify.click_here'), "#{@project.permalink}+task+#{target.id}@#{Rails.configuration[:app_domain]}"
         - elsif target.class == Conversation
-          = t('emailer.notify.view_this_conversation_online_html', :conversation => link_to(conversation_title, [@project, target]))
-        = t('emailer.notify.stop_watching_link_html', :stop_watch => link_to(t('emailer.notify.stop_watch'), [@project, target]) )
+          - email = link_to t('emailer.notify.click_here'), "#{@project.permalink}+conversation+#{target.id}@#{Rails.configuration[:app_domain]}"
+        = t('emailer.notify.digest_reply_html', :click_here_link => link, :click_here_email => email)
 
   .footer{ :style => email_text(:small) }
     %p
