Task List Templates

--- a/app/styles/_buttons.sass
+++ b/app/styles/_buttons.sass
@@ -10,7 +10,7 @@ a.loading_button
     font-weight: bold
     background: url(/images/loading_button_wrap_bg.jpg) no-repeat right
 
-a.button, a.unarchive_task_list_link, a.reorder_task_list_link, a.add_button, a.new_task_list_link
+a.button, a.unarchive_task_list_link, a.reorder_task_list_link, a.add_button, a.new_task_list_link, a.new_task_list_template
   display: inline-block
   padding: 0.4em 0.7em
   font-size: 12px
