--- a/app/styles/application.sass
+++ b/app/styles/application.sass
@@ -12,6 +12,7 @@
 @import comments
 @import conversations
 @import tasks
+@import task_list_templates
 @import pages
 @import users
 @import banner
@@ -81,7 +82,7 @@ div.column_wrap h2
   font-size: 12px
   color: rgb(200,200,200)
   margin: 0
-  a.add_button, a.new_task_list_link
+  a.add_button, a.new_task_list_link, a.new_task_list_template
     text-decoration: none
   a
     text-decoration: underline
