--- a/app/views/organizations/appearance.haml
+++ b/app/views/organizations/appearance.haml
@@ -1,7 +1,7 @@
 %h2= t('.title', :organization => @organization)
 
 - if can?(:admin, @organization)
-  = form_for @organization, :html => { :multipart => true } do |f|
+  = form_for @organization, :url => update_appearance_organization_path(@organization), :html => { :multipart => true } do |f|
     = f.error_messages
     = render 'organizations/appearance_fields', :f => f
     .submit
